@@ -21,7 +21,6 @@ import java.lang.reflect.Type;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import io.basc.framework.core.reflect.ReflectionUtils;
 import io.basc.framework.lang.Nullable;
@@ -78,9 +77,8 @@ public final class BridgeMethodResolver {
 		if (bridgedMethod == null) {
 			// Gather all methods with matching name and parameter size.
 			List<Method> candidateMethods = ReflectionUtils.getDeclaredMethods(bridgeMethod.getDeclaringClass())
-					.withAll().all().stream()
-					.filter((candidateMethod) -> isBridgedCandidateFor(candidateMethod, bridgeMethod))
-					.collect(Collectors.toList());
+					.withAll().all().getElements()
+					.filter((candidateMethod) -> isBridgedCandidateFor(candidateMethod, bridgeMethod)).toList();
 			if (!candidateMethods.isEmpty()) {
 				bridgedMethod = candidateMethods.size() == 1 ? candidateMethods.get(0)
 						: searchCandidates(candidateMethods, bridgeMethod);
